syntax = "proto3";
import "google/protobuf/timestamp.proto";

package LoginProto;

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  google.protobuf.Timestamp expiration = 3;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}
